--- a/SignalGenerator.csproj
+++ b/SignalGenerator.csproj
@@ -72,13 +72,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Applicatoin\SignalWaveVisualizerForm.cs">
+    <Compile Include="Application\SignalWaveVisualizerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Applicatoin\SignalWaveVisualizerForm.Designer.cs">
+    <Compile Include="Application\SignalWaveVisualizerForm.Designer.cs">
       <DependentUpon>SignalWaveVisualizerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Applicatoin\Program.cs" />
+    <Compile Include="Application\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Signal\ISignalWave.cs" />
     <Compile Include="Signal\SignalWaveType.cs" />
@@ -86,7 +86,7 @@
     <Compile Include="Signal\SignalWave\SawtoothSignalWave.cs" />
     <Compile Include="Signal\SignalWave\SquareSignalWave.cs" />
     <Compile Include="Signal\SignalWave\TriangleSignalWave.cs" />
-    <EmbeddedResource Include="Applicatoin\SignalWaveVisualizerForm.resx">
+    <EmbeddedResource Include="Application\SignalWaveVisualizerForm.resx">
       <DependentUpon>SignalWaveVisualizerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
